# Blog

./: .pre-commit-config.yaml  Dockerfile  README.md  example.env  pyproject.toml
infra/: docker-compose.yml
network/: manage.py
network/api/: constants.py  serializers.py  urls.py  views.py
network/blogs/: admin.py  constatns.py  models.py  tasks.py
network/blogs/management/commands/: fillbase.py
network/blogs/migrations/: 0001_initial.py  0002_initial.py
network/network/: settings.py  urls.py
network/users/: admin.py  models.py
network/users/migrations/: 0001_initial.py
