[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.20"
djangorestframework = "3.14.0"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.7"
pre-commit = "^3.3.3"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
django-extensions-shell = "^1.7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
