[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.20"
djangorestframework = "3.14.0"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.7"
pre-commit = "^3.3.3"
redis = "^4.6.0"
django-redis = "^5.3.0"
celery = "^5.3.1"
flower = "^2.0.0"
pyyaml = "^6.0.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.3"
mixer = "^7.2.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_local_folder = ["blogs", "api", "users"]
